# Recipe-Agent

./: .env.example  .gitignore  Dockerfile  Makefile  PRD.md  README.md  pyproject.toml
config/: settings.yaml
docs/: architecture_v0.1.md  roadmap_v0.1.md  roadmap_v0.1_summary.md  user_research_v0.1.md
schemas/: recipe_v0.1.json
src/recipe_agent/: __init__.py  cli.py  main.py
src/recipe_agent/api/: __init__.py  bot.py  recipes.py  users.py
src/recipe_agent/core/: __init__.py  bot.py  llm.py  prompts.py  vectordb.py  vision.py
src/recipe_agent/models/: __init__.py  recipe.py  user.py
src/recipe_agent/services/: __init__.py  bot_handler.py  multimodal.py  nutrition_calculator.py  recipe_generator.py  recipe_store.py  recommendation.py
tests/: __init__.py  test_models.py  test_nutrition.py
