[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recipe-agent"
version = "0.1.0"
description = "个性化多模态菜谱 Agent - 智能饮食健康管理与内容创作平台"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "DaimaRuge", email = "daimaruge@example.com" }
]
keywords = ["recipe", "agent", "llm", "multimodal", "nutrition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.0.0",
    "whisper>=1.1.10",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "llama-index>=0.9.0",
    "chromadb>=0.4.0",
    "pydantic-core>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
recipe-agent = "recipe_agent.cli:main"

[project.urls]
Homepage = "https://github.com/DaimaRuge/recipe-agent"
Documentation = "https://github.com/DaimaRuge/recipe-agent#readme"
Repository = "https://github.com/DaimaRuge/recipe-agent"
Issues = "https://github.com/DaimaRuge/recipe-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_agent"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
